--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,7 @@
 /*主体部分样式*/
+			a{
+				text-decoration: none;
+			}
 			.content{
 				height: 2000px;
 				width: 100%;
@@ -129,4 +132,288 @@
 			}
 			.text-main ul li a:hover{
 				color: #2464B5;
+			}
+			.content-message{
+				width: 100%;
+				height: 740px;
+				/*background: blue;*/
+				margin-top: 15px;
+			}
+			.message-left{
+				width: 900px;
+				height: 100%;
+				/*background: green;*/
+				float: left;
+				box-sizing: border-box;
+			}
+			
+			.message-left-title{
+				width: 890px;
+				height: 40px;
+				/*background: #ccc;*/
+				border-bottom: 1px solid #e5e5e5;
+			}
+			.message-left-title .add-team{
+				margin-right: 10px;
+			}
+			.message-left-title .add-team span{
+				color: #2464B5;
+				line-height: 39px;
+				padding-right: 20px;
+				background: url('../images/add-team.png') right center no-repeat;
+			}
+			.new-message{
+				padding-top: 3px;
+				float: left;
+				line-height: 36px;
+				border-bottom: 3px solid red;
+			}
+			.new-message h2 a{
+				background: url('../images/message.png') 0 center no-repeat;
+				display: inline-block;
+				padding-left: 36px;
+				text-decoration: none;
+				color: #2464b5;
+			}
+			.add-team{
+				float: right;
+			}
+			.message-change{
+				width: 100%;
+				height: 30px;
+				box-sizing: border-box;
+			}
+			.message-change .title-change{
+				color: #2464b5;
+				line-height: 30px;
+				background: url('../images/message-change.png') no-repeat 0 center;
+			}
+			.message-images{
+				width: 100%;
+				height: 640px;
+				/*background: #ccc;*/
+			}
+			.top-images{
+				width: 100%;
+				height: 314px;
+			}
+			.top-images div{
+				width: 440px;
+				height: 100%;
+				float: left;
+				margin-right: 10px;
+				margin-bottom: 10px;
+				overflow: hidden;
+				position: relative;
+			}
+			.top-images div a{
+				width: 440px;
+				height: 100%;
+			}
+			.top-images div img{
+				width: 100%;
+				height: 100%;
+				transition: 1s;
+			}
+			.top-images div a img:hover{
+				transform: scale(1.1);
+			}
+			.top-images div a span{
+				font-family: '微软雅黑';
+				line-height: 86px;
+				position: absolute;
+				left: 0px;
+				bottom: -10px;
+				padding-left: 45px;
+				color: white;
+				font-size: 19px;
+			}
+			.top-images div a .top-left{
+    			background: url(../images/message-top-left.png) 17px 34px no-repeat;
+			}
+			.top-images div a .top-right{
+    			background: url(../images/message-top-right.png) 17px 34px no-repeat;
+			}
+			.bottom-images{
+				width: 100%;
+				height: 306px;
+				/*background: #ccc;*/
+			}
+			.bottom-images .small-images{
+				width: 290px;
+				height: 306px;
+				/*background: skyblue;*/
+				margin-right: 10px;
+				margin-bottom: 10px;
+				float: left;
+
+
+			}
+			.bottom-images .small-images a{
+				color: black;
+			}
+			.bottom-images .small-images a:hover img{
+				transform: scale(1.1);
+			}
+			.bottom-images .small-images a:hover .small-text{
+				color: #2464b5;
+			}
+			.bottom-images .small-images a .small-show{
+				width: 290px;
+				height: 200px;
+				overflow: hidden;
+			}
+			.bottom-images .small-images a .small-show img{
+				width: 100%;
+				height: 100%;
+				transition: 1s;
+			}
+			.small-text{
+				padding: 10px;
+				width: 100%;
+				height: 106px;
+				box-sizing: border-box;
+				border: 1px solid #e5e5e5;
+				border-top: 0;
+			}
+			.small-text .small-title{
+				display: block;
+				height: 57px;
+			}
+			.small-text .small-icon{
+				display: block;
+				height: 16px;
+				line-height: 16px;
+				text-align: right;
+				padding: 10px;
+				font-size: 12px;
+				background: url('../images/message-icon.png') 0 center no-repeat;
+			}
+			.more-message{
+				width: 890px;
+				height: 30px;
+				display: block;
+				line-height: 30px;
+				text-align: center;
+				background: #f0f0f0;
+				color: #2464b5;
+				font-size: 14px;
+				cursor: pointer;
+				font-family: '微软雅黑';
+			}
+			.more-message:hover{
+				background: #2464b5;
+				color: white;
+			}
+			.more-message:hover span{
+				background: url('../images/more-message-white.png') 60px 50% no-repeat;
+			}
+			.more-message span{
+				padding-right: 15px;
+				background: url('../images/more-message.png') 60px 50% no-repeat;
+			}
+
+			.message-right{
+				width: 300px;
+				height: 100%;
+				/*background: #ccc;*/
+				float: left;
+			}
+			.message-right .ranking-button{
+				width: 100%;
+				height: 80px;
+			}
+			.ranking-button .ranking-top,.ranking-bottom{
+				width: 100%;
+				height: 40px;
+			}
+			.ranking-top div,.ranking-bottom div{
+				float: left;
+				width: 50%;
+				height: 100%;
+			}
+			.top-east{
+				background: #2464b5;
+			}
+			.top-east a,.top-west a{
+				display: block;
+				width: 100%;
+				height: 100%;
+				color: white;
+				text-align: center;
+				line-height: 40px;
+				font-size: 13px;
+			}
+			.top-west a{
+				color: black;
+			}
+			.top-west{
+				background: #e5e5e5;
+			}
+			.bottom-east,.bottom-west{
+				background: #eee;
+			}
+			.bottom-east a,.bottom-west a{
+				width: 100px;
+				height: 40px;
+				display: block;
+				color: red;
+				text-align: center;
+				line-height: 40px;
+				margin: 0 auto;
+				border-bottom: 4px solid red;
+				box-sizing: border-box;
+			}
+			.bottom-west a{
+				color: black;
+				border: 0;
+			}
+
+			.bottom-east a img,.bottom-west a img{
+				width: 24px;
+				height: 24px;
+				line-height: 40px;
+				vertical-align: middle;
+			}
+			.ranking-data{
+				text-align: center;
+				width: 100%;
+				box-sizing: border-box;
+				font-weight: 700;
+			}
+			.ranking-data img{
+				width: 30px;
+				height: 30px;
+			}
+			.ranking-data a{
+				color: #356da0;
+			}
+			.ranking-data th{
+				background: white;
+				text-align: center;
+				padding: 5px;
+				font-size: 15px;
+				font-weight: 400;
+			}
+			.ranking-data td:nth-child(3){
+				padding-left: 20px;
+				text-align: left;
+				font-size: 14px;
+				font-weight: 400;
+			}
+			.ranking-data th:nth-child(4){
+				padding-right: 6px;
+			}
+			.ranking-data td:nth-child(4){
+				padding-right: 6px;
+			}
+			.ranking-data tr:nth-child(even){
+				background: rgba(146,144,144,.2);
+				border: 0;
+			}
+			.ranking-data tr:hover{
+				background: #e0e0e0;
+			}
+			.ranking-data a:hover{
+				text-decoration: underline;
 			}
